# hello-python-packaging

./: LICENSE  README.md  pyproject.toml
deleteme/: hello.py
