[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "deleteme"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
    {name = "Antoine van Gelder", email = "antoine@flowdsp.io"},
]
license = { text = "BSD" }
description = "Test Python Package"
urls = { Source = "https://github.com/antoinevg/hello-python-packaging" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    #"pyusb", "pyserial", "prompt-toolkit",
]

[tool.setuptools-git-versioning]
enabled = true
